--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kogal Leopard</title>
+    <title>Leopurr-Kogal: Cal!</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://pyscript.net/releases/2024.1.1/core.css">
@@ -139,7 +139,7 @@
         <div class="grades-container">
             <div class="grade-input-group">
                 <div class="input-group">
-                    <span class="input-group-text"><b>Beauty-Chem ヽ(>∀<☆)ノ</b></span>
+                    <span class="input-group-text"><b>Beauty-Chem (>∀<☆)</b></span>
                     <input type="text" class="form-control" id="bchem" placeholder="Grade ⭑.ᐟ">
                 </div>
             </div>
@@ -160,7 +160,7 @@
             
             <div class="grade-input-group">
                 <div class="input-group">
-                    <span class="input-group-text"><b>Language	(・∀・)ノ</b></span>
+                    <span class="input-group-text"><b>Language (・∀・)</b></span>
                     <input type="text" class="form-control" id="engfiljp" placeholder="Grade ⭑.ᐟ">
                 </div>
             </div>
@@ -192,4 +192,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="py" src="main.py"></script>
 </body>
+
 </html>
